--- a/notebooks/inference_prep.ipynb
+++ b/notebooks/inference_prep.ipynb
@@ -71,11 +71,10 @@
     "    Returns:\n",
     "        pd.DataFrame: A DataFrame containing file name, raw text, and empty columns for sentiment, follow-up_needed, and tag.\n",
     "    \"\"\"\n",
-    "    # Initialize list to hold file data\n",
     "    data = []\n",
     "    \n",
     "    for file_name in os.listdir(data_folder):\n",
-    "        # Check if the file matches the 'transcript_x.txt' format\n",
+    "        # Check if the file matches 'transcript_x.txt' format\n",
     "        if file_name.startswith(\"transcript_\") and file_name.endswith(\".txt\"):\n",
     "            file_path = os.path.join(data_folder, file_name)\n",
     "            \n",
@@ -96,7 +95,7 @@
     "            except Exception as e:\n",
     "                print(f\"Error reading {file_name}: {e}\")\n",
     "                \n",
-    "    # Convert the list of dictionaries into a DataFrame\n",
+    "    # Convert the list of dicts to df\n",
     "    df = pd.DataFrame(data, columns=['name', 'raw', 'sentiment', 'follow_up_needed', 'tag'])\n",
     "    return df"
    ]
@@ -1922,6 +1921,63 @@
    ],
    "source": [
     "df['tag'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "6a73d82c-5014-44e7-b5ed-2fa9951c52ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "follow_up_needed\n",
+       "no     131\n",
+       "yes     67\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['follow_up_needed'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "c536a1aa-225b-4e70-ba2e-eec59797b11a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sentiment\n",
+       "positive    129\n",
+       "neutral      49\n",
+       "negative     20\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['sentiment'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5e3f8c9-90b8-438a-8625-473b85581cad",
+   "metadata": {},
+   "source": [
+    "Monitor imbalance in dataset - potentially need to adjust scoring metric"
    ]
   },
   {
